--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 
                 <div class="contact-form fadeIn delay-1">
                     <form id="contactForm" action="https://formspree.io/f/xanedzzj" method="POST">
