Add new project

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
                         <span class="skill-tag">Python</span>
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">HTML/CSS</span>
+                        <span class="skill-tag">SMTP</span>
                         <span class="skill-tag">Data Visualization</span>
                         <span class="skill-tag">Web Scraping</span>
+                        <span class="skill-tag">GitHub Actions</span>
                     </div>
                 </div>
             </div>
